@@ -1,3 +1,6 @@
+- urpmi
+  o in --auto, do display error message when rpms are missing
+
 Version 6.18 - 28 October 2008
 
 - urpmi, gurpmi
